--- a/css/w.css
+++ b/css/w.css
@@ -162,13 +162,14 @@ a {
     border: none;
     outline: none; 
     background-color: #6cc7d9;
+    transition: background 0.3s;
     color: white;
     cursor: pointer; 
     padding: 15px; 
     border-radius: 10px;
 }
 #myBtn:hover {
-    background-color: #555; 
+    background-color: #0056b3;
 }
 .Back-to-top {
     width: 36px;
